# clicks-monitor

./: Cargo.toml  README.md  dist-workspace.toml
src/: actions.rs  app.rs  main.rs  theme.rs  udp.rs
src/widget/: cassette.rs  mod.rs  popup.rs  textentry.rs
src/window/: appearance.rs  beats.rs  connection.rs  control.rs  cue.rs  events.rs  hotkeys.rs  jack.rs  local_config.rs  logs.rs  mod.rs  navigation.rs  network.rs  performance.rs  playback.rs  security.rs  settings_audio.rs  sources.rs  statusbar.rs  system_config.rs  time.rs  timeline.rs  transport.rs
wix/: main.wxs
