[package]
name = "monitor"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Karspexet/ClicKS"
authors = [ "Axel Stenberg" ]
description = "Live software monitor for the ClicKS digital metronome and timing suite"

[package.metadata.wix]
upgrade-guid = "F6F7C0A2-4B2E-4CD0-948C-866D3B5CEABD"
path-guid = "DB994FF2-5F33-4695-99E6-06ED0337EA35"
license = false
eula = false

[dependencies]
crossbeam-channel = "0.5.15"
eframe = { version = "0.31.1", features = ["persistence"]}
egui = "0.31.1"
serde = "1.0.219"
serde_json = "1.0.140"
common = { git = "https://github.com/lexag/clicks-common.git", branch = "dev", features = ["serde", "postcard", "std", "json"] }
egui_extras = "0.31.1"
whoami = "1.6.0"
chrono = "0.4.41"
local-ip-address = "0.6.5"
itertools = "0.14.0"
postcard = { version = "1.1.3", features = ["use-std"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
