[package]
name = "monitor"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/Karspexet/ClicKS"
authors = [ "Axel Stenberg" ]
description = "Live software monitor for the ClicKS digital metronome and timing suite"

[package.metadata.wix]
upgrade-guid = "F6F7C0A2-4B2E-4CD0-948C-866D3B5CEABD"
path-guid = "DB994FF2-5F33-4695-99E6-06ED0337EA35"
license = false
eula = false

[dependencies]
crossbeam-channel = "0.5.15"
eframe = { version = "0.33.3", features = ["persistence"] }
egui = { version = "0.33.3", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
common = { git = "https://github.com/lexag/clicks-common.git", branch = "combinedstatus-playback", features = ["serde", "postcard", "std", "json"] }
egui_extras = { version = "0.33.3", features = ["all_loaders", "image"] }
whoami = "1.6.0"
chrono = "0.4.41"
local-ip-address = "0.6.5"
itertools = "0.14.0"
postcard = { version = "1.1.3", features = ["use-std"] }
egui_dock = { version = "0.18.0", features = ["serde"] }
egui-keybind = { version = "0.8.0", features = ["serde"] }
image = "0.25.6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
